# bray

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Pipfile  README.rst  devutils.sh  pyproject.toml  pytest.ini  rebuild.sh  requirements-before-bonobo.txt  setup.cfg  setup.py  tox.ini  tox.ini.original
ci/: bootstrap.py  requirements.txt
ci/templates/: .travis.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: bray.rst  index.rst
etl/: job.toml
etl/data/: input.csv
src/bray/: __init__.py  __main__.py  cli.py  config.py  errors.py  etl.py  geoclient.py  service.py  settings.toml  util.py
tests/: __init__.py  conftest.py  test_bray.py  test_config.py  test_geoclient.py  test_util.py
tests/data/: config.json  search-ok-exact-match.json  search-ok-mixed-matches.json  search-ok-possible-matches.json  search-rejected-no-rejects.json  search-rejected-with-rejects.json
tests/projects/example/: config.ini  readme.txt  settings.toml
