[metadata]
name = bray
version = attr: bray._version.__version__
# Must be same as bray/_version.py
#version='0.2.0'
description = Simple batch API for geocoding in Python using Geoclient
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mlipper/bray
author = Matthew Lipper
author_email = mlipper@gmail.com
license = Apache-2.0
license_files = LICENSE.txt
classifiers =
    Development Status:: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
keywords = etl, geocoding, nyc, geoclient
project_urls =
    Documentation=https://bray.readthedocs.io
    Changelog=https://bray.readthedocs.io/en/latest/changelog.html
    Tracker=https://github.com/mlipper/bray/issues

[options]
packages = find:
install_requires =
    bonobo==0.7.0rc3
    dynaconf
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
# See pyproject.toml: [build-system].requires
# setup_requires = setuptools>=42.0

[options.entry_points]
console_scripts =
    bray=bray.cli:main

[options.extras_require]
tests =
    flake8
    pytest-cov
    pytest-travis-fold # necessary?
    pytest

[options.package_data]
bray = settings.toml

[options.packages.find]
where=src

[flake8]
exclude = .tox,*.egg,ci/templates,build,dist
# exclude = .tox,.eggs,ci/templates,build,dist
# exclude = .git,__pycache__,docs/,*.egg,build,data
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704
max_line_length = 140
select = E,W,F

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
known_first_party =
    bray
    tests
skip = .tox,.eggs,ci/templates,build,dist

[build-system]
requires = ["setuptools", "wheel"]
